kube-prometheus/kube-prometheus-deployment.yaml
# Source: cost-analyzer/templates/prometheus-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: "server"
    app: prometheus
    release: kubecost
    heritage: Helm
  name: kubecost-prometheus-server
  namespace: observability
spec:
  selector:
    matchLabels:
      component: "server"
      app: prometheus
      release: kubecost
  replicas: 1
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        component: "server"
        app: prometheus
        release: kubecost
        heritage: Helm
    spec:
      serviceAccountName: kubecost-prometheus-server
      containers:

        - name: prometheus-server
          image: "quay.io/prometheus/prometheus"
          imagePullPolicy: "IfNotPresent"
          args:
            - --storage.tsdb.retention.time=97h
            - --config.file=/etc/config/prometheus.yml
            - --storage.tsdb.path=/data
            - --web.console.libraries=/etc/prometheus/console_libraries
            - --web.console.templates=/etc/prometheus/consoles
            - --web.enable-lifecycle
            - --query.max-concurrency=1
            - --query.max-samples=1e+08
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
          resources:
            {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
            - name: storage-volume
              mountPath: /data
              subPath: ""
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: kubecost-prometheus-server
        - name: storage-volume
          persistentVolumeClaim:
            claimName: kubecost-prometheus-server
