kube-prometheus/kube-prometheus-services.yaml
# Source: cost-analyzer/templates/prometheus-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: "server"
    app: prometheus
    release: kubecost
    heritage: Helm
  name:  prometheus-server
  namespace: observability
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    component: "server"
    app: prometheus
    release: kubecost
  sessionAffinity: None
  type: "ClusterIP"
---
