kube-prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  # namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - prometheus.158.23.241.15.nip.io
    # - kibana.68.155.88.26.nip.io
    secretName: letsencrypt-staging
  rules:
  - host: prometheus.158.23.241.15.nip.io
    http:
      paths:
      - backend:
          service:
            name: kubecost-prometheus-server
            port:
              number: 9090
        path: /
        pathType: Prefix
  ingressClassName: nginx
